apps/base/media-stack/radarr.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: radarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: radarr
    spec:
      terminationGracePeriodSeconds: 60
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: NotIn
                    values:
                      - talos-rwj-wvp
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: radarr
          image: lscr.io/linuxserver/radarr:6.3.0.10514-ls312
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
              add:
                - CHOWN
                - DAC_OVERRIDE
                - SETGID
                - SETUID
          ports:
            - name: radarr-http
              containerPort: 7878
          startupProbe:
            tcpSocket:
              port: radarr-http
            periodSeconds: 5
            failureThreshold: 60
          readinessProbe:
            tcpSocket:
              port: radarr-http
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: radarr-http
            periodSeconds: 30
            failureThreshold: 3
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              memory: 2Gi
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media-pool
              mountPath: /media
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: radarr-config
        - name: media-pool
          persistentVolumeClaim:
            claimName: media-pool
        - name: scripts
          configMap:
            name: media-stack-scripts
