apps/base/media-stack/ingresses.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: apps-authentik-forwardauth@kubernetescrd
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Prowlarr
    gethomepage.dev/description: Media indexer management
    gethomepage.dev/group: Media
    gethomepage.dev/icon: prowlarr.png
spec:
  ingressClassName: traefik-internal
  rules:
    - host: prowlarr.int.harville.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prowlarr
                port:
                  name: http
  tls:
    - hosts:
        - prowlarr.int.harville.dev
      secretName: placeholder
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: apps-authentik-forwardauth@kubernetescrd
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Radarr
    gethomepage.dev/description: Movie library management
    gethomepage.dev/group: Media
    gethomepage.dev/icon: radarr.png
spec:
  ingressClassName: traefik-internal
  rules:
    - host: radarr.int.harville.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: radarr
                port:
                  name: http
  tls:
    - hosts:
        - radarr.int.harville.dev
      secretName: placeholder
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Jellyfin
    gethomepage.dev/description: Movies and media playback
    gethomepage.dev/group: Media
    gethomepage.dev/icon: jellyfin.png
spec:
  ingressClassName: traefik-public
  rules:
    - host: media.harville.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyfin
                port:
                  name: http
  tls:
    - hosts:
        - media.harville.dev
      secretName: placeholder
